# sora-to-ki

./: .dockerignore  .env.example  .gitignore  .mcp.json  Cargo.toml  Dockerfile  NITRO_MIGRATION_PLAN.md  PERFORMANCE_OPTIMIZATION.md  PERSONAL_BRAND_UPDATE.md  README.md  README.md.backup  ROADMAP.md  TS_MIGRATION_HANDOFF.md  builder.config.js  builder.config.schema.json  builder.config.ts  changelog.txt  components.json  docker-compose.yml  eslint.config.js  index.html  mutagen.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  serve.cjs  serve.mjs  stats.html  text.txt  tsconfig.json  tsconfig.scripts.json  vite.config.js  vite.config.start.ts  vitest.config.ts
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  SPECTA_PLAN.md  STRANGLER.md
backend/migrations/: 0001_init.sql  0002_posts_format.sql
backend/scripts/: mint.cjs
backend/src/: auth.rs  error.rs  lib.rs  main.rs  net_guard.rs  openapi.rs  proxy.rs  revalidate.rs  router.rs  state.rs  util.rs
backend/src/handlers/: admin.rs  auth.rs  bahamut.rs  books.rs  categories.rs  collection.rs  comments.rs  gallery.rs  home.rs  link_preview.rs  mailer.rs  mod.rs  newsletter.rs  oauth.rs  og.rs  opencc.rs  posts.rs  quote.rs  rss.rs  series.rs  spotify.rs  stats.rs  tags.rs  thirdparty.rs  thoughts.rs  upload.rs  vitals.rs  watch.rs
backend/tests/: api.rs
docs/archive/: NITRO_MIGRATION_PLAN.md  NOW.md  Setup.md
public/: favicon.ico.bak  offline.html  robots.txt  site.webmanifest  sitemap.xml  sw.js
scripts/: backup-db.sh
scripts/builder/: config.ts  exif-extractor.ts  image-processor.ts  index.ts
scripts/hooks/: pre-commit
server/: .dockerignore  .env.example  .gitignore  Dockerfile  auth.js  database.js  index.js  mailer.js  package-lock.json  package.json  photoTagger.js  pnpm-lock.yaml  reset-admin.js
server-rs/: Cargo.toml  Dockerfile  STRANGLER.md
server-rs/scripts/: migrate-comments-post-id-nullable.sh  trakt-device-auth.cjs
server-rs/src/: error.rs  main.rs  proxy.rs  state.rs
server-rs/src/handlers/: admin.rs  auth.rs  bahamut.rs  collection.rs  comments.rs  gallery.rs  home.rs  mailer.rs  mod.rs  newsletter.rs  oauth.rs  opencc.rs  posts.rs  quote.rs  rss.rs  spotify.rs  upload.rs
server/routes/: _revalidate.ts  home.js  llms.txt.ts  robots.txt.ts  sitemap.xml.ts  thoughts.js  watch.js
server/scripts/: import-netflix-csv.js  tmdb-enrich.js  trakt-device-auth.js
src/: App.css  App.jsx  App.tsx  activityData.ts  adminData.ts  api.ts  blogList.ts  bookshelfData.ts  commentsData.ts  homeData.ts  i18n.js  i18n.ts  index.css  locale-link.tsx  localePage.tsx  main.jsx  main.tsx  musicData.ts  newsletterData.ts  pageSeo.ts  routeTree.gen.ts  router.tsx  seoMeta.ts  start-i18n.test.ts  start-i18n.tsx  thinkingData.ts  thoughtData.ts  vite-env.d.ts  watchData.ts
src/components/: AboutMe.css  AboutMe.jsx  AboutMe.tsx  AboutPage.css  AboutPage.jsx  AboutPage.tsx  AboutSite.jsx  AboutSite.tsx  Activity.css  Activity.jsx  Activity.tsx  AdminApp.tsx  AdminDashboard.css  AdminDashboard.jsx  AdminFixes.css  AdminLogin.css  AdminLogin.jsx  AdminPanel.css  AdminPanel.jsx  AdminPanel.modern.css  AdvancedEditor.css  AdvancedEditor.jsx  AdvancedEditor.tsx  Anime.css  Anime.jsx  Anime.tsx  AppShell.tsx  BackToTopButton.css  BackToTopButton.jsx  BackToTopButton.tsx  BackdropErrorBoundary.tsx  BarChartBlock.tsx  BlackHole.css  BlackHole.jsx  BlackHole3D.css  BlackHole3D.jsx  Blog.css  Blog.jsx  Blog.tsx  BlogPost.css  (+206 more)
src/components/admin/: AdminDashboard.jsx  AdminDashboard.tsx  AdminLayout.jsx  AdminLayout.tsx  AdminLoginNew.jsx  AdminLoginNew.tsx  AdminTheme.css  ArticleGenerator.jsx  ArticleGenerator.tsx  BooksManager.jsx  BooksManager.tsx  CategoriesManager.jsx  CategoriesManager.tsx  CollectionManager.jsx  CollectionManager.tsx  CommentsManager.jsx  CommentsManager.tsx  Dashboard.jsx  ModernEnhancements.css  OverviewChart.tsx  PhotoSelectorModal.jsx  PhotoSelectorModal.tsx  PostEditor.jsx  PostEditor.tsx  PostLinkModal.jsx  PostLinkModal.tsx  PostPreview.tsx  PostsList.jsx  PostsList.tsx  SubscribersManager.jsx  (+5 more)
src/contexts/: AuthContext.jsx  AuthContext.tsx  PageVisibilityContext.jsx  PageVisibilityContext.tsx
src/data/: journeyData.js  journeyData.ts  posts.json
src/hooks/: use-is-in-view.jsx  use-is-in-view.ts  useHtmlLang.js  useHtmlLang.ts  useInView.js  useInView.ts
src/lib/: articleCache.js  articleCache.ts  blogContent.ts  langEmoji.ts  mdx-compile.ts  perfKnobs.ts  prefetchPost.js  prefetchPost.ts  reportWebVitals.ts  shikiHighlight.js  shikiHighlight.ts  starfieldGpu.ts  usePrefetchArticle.ts  utils.js  utils.ts  webglSupport.ts
src/pages/: AboutDemo.tsx  BlogPostPage.tsx  LocaleHome.tsx
src/routes/: __root.tsx  about-site.tsx  about.tsx  activity.tsx  anime.tsx  bookshelf.tsx  cinema.tsx  friends.tsx  history.tsx  index.tsx  isr-demo.tsx  journey.tsx  messages.tsx  music.tsx  photos.tsx  portfolio.tsx  setup.tsx  thinking.tsx  unsubscribe.tsx
src/schemas/: post.ts
src/store/: photoStore.ts
src/styles/: glass-morphism.css
src/types/: photo.ts  webmcp.d.ts
src/utils/: manifestLoader.ts  n8n-transformer.ts
src/workers/: spaceGpuWorker.ts  spaceWorker.jsx  spaceWorker.tsx
(+107 files in other folders)
